--- a/src/app/component/navbar/navbar-menu/navbar-menu.component.html
+++ b/src/app/component/navbar/navbar-menu/navbar-menu.component.html
@@ -3,6 +3,6 @@
       <a routerLink="welcome">Welcome</a>
     </li>
     <li nz-menu-item nzMatchRouter>
-      <a routerLink="cliente">Cliente</a>
+      <a routerLink="example">Examples</a>
     </li>
   </ul>
