--- a/src/app/pages/public/error/error.component.html
+++ b/src/app/pages/public/error/error.component.html
@@ -2,6 +2,6 @@
 
 <nz-result [nzStatus]="code" [nzTitle]="title" [nzSubTitle]="message">
     <div nz-result-extra>
-      <button nz-button nzType="primary" (click)="welcome()">Welcome</button>
+      <button nz-button nzType="primary" nzShape="round"(click)="welcome()">Welcome</button>
     </div>
 </nz-result>
