--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
 app-root{
     min-height: calc(100% - 0px);
+}
+
+nz-card {
+    border-radius: 10px !important;
+    border-color: transparent;
+    box-shadow: 0 1px 2px -2px rgba(0, 0, 0, .16), 0 3px 6px 0 rgba(0, 0, 0, .12), 0 5px 12px 4px rgba(0, 0, 0, .09);
+}
+.ant-card-actions {
+    border-radius: 0px 0px 10px 10px !important;
 }
